--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-/* html, body, #root {
-    width: 100%;
-} */
 
 html {
     scroll-behavior: smooth;
 }
 body {
     font-family: Inter, sans-serif;
+    margin:0;
     }
